--- a/src/index.css
+++ b/src/index.css
@@ -38,8 +38,18 @@ p {
   margin: 0;
 }
 
+input {
+  outline: none;
+  border-radius: 2px;
+}
+
 button {
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  outline: none;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  margin: 0;
 }
